# brahim-energy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
brahim_energy/: __init__.py  constants.py
brahim_energy/battery/: __init__.py  materials.py  optimizer.py
brahim_energy/budget/: __init__.py  manager.py
brahim_energy/carbon/: __init__.py  cascade.py  photosynthesis.py
brahim_energy/forecast/: __init__.py  demand.py
brahim_energy/grid/: __init__.py  adapters.py  demand_response.py  eu.py  optimizer.py  us.py
tests/: test_battery.py  test_budget.py  test_carbon.py  test_constants.py  test_demand_response.py  test_eu_grid.py  test_forecast.py  test_grid_optimizer.py  test_materials.py  test_us_grid.py
