[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brahim-energy"
version = "1.0.0"
description = "Unified energy intelligence SDK: grid optimization, battery materials, demand response, CO2 tracking, photosynthesis/MOF carbon capture. Zero dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = "LicenseRef-Proprietary"
authors = [
    { name = "Elias Oulad Brahim", email = "elias@cloudhabil.com" },
]
keywords = [
    "energy", "grid", "optimization", "battery", "demand-response",
    "co2", "photosynthesis", "mof", "carbon-capture", "brahim",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[project.optional-dependencies]
modbus = ["pymodbus>=3.0"]
mqtt = ["paho-mqtt>=2.0"]
rest = ["requests>=2.28"]
all = ["pymodbus>=3.0", "paho-mqtt>=2.0", "requests>=2.28"]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.8"]

[project.urls]
Homepage = "https://github.com/Cloudhabil/brahim-energy"
Documentation = "https://github.com/Cloudhabil/brahim-energy#readme"
Repository = "https://github.com/Cloudhabil/brahim-energy"
Issues = "https://github.com/Cloudhabil/brahim-energy/issues"

[tool.hatch.build.targets.wheel]
packages = ["brahim_energy"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_return_any = false
disable_error_code = ["type-arg"]

[[tool.mypy.overrides]]
module = [
    "brahim_energy.battery.materials",
    "brahim_energy.carbon.cascade",
    "brahim_energy.grid.adapters",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
